// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## Unreleased
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐣
| Do not print serviceUID and configUID labels in service export result
| https://github.com/knative/client/pull/1194[#1194]
|===

## v0.20.0 (2021-01-14)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix parsing the `kn` commands from error message
| https://github.com/knative/client/pull/1174[#1174]

| 🐣
| Remove unnecessary help message introduced for machine-readable outputs for command `kn source binding describe`
| https://github.com/knative/client/pull/1158[#1158]

| 🐣
| Improve error handling in clients
| https://github.com/knative/client/pull/1154[#1154]

| 🎁
| Build and release binaries for `linux/ppc64le`
| https://github.com/knative/client/pull/1153[#1153]

| 🐣
| Remove unnecessary help message introduced for machine-readable outputs for commands which does not have `-o url` flag
| https://github.com/knative/client/pull/1152[#1152]

| 🎁
| Add machine readable output options to `kn source ping describe`
| https://github.com/knative/client/pull/1150[#1150]

| 🎁
| Add machine readable output options to `kn source binding describe`
| https://github.com/knative/client/pull/1148[#1148]

| 🎁
| Add machine readable output options to `kn source apiserver describe`
| https://github.com/knative/client/pull/1146[#1146]

| 🎁
| Add machine readable output options to `kn broker describe`
| https://github.com/knative/client/pull/1124[#1124]

| 🎁
| Add `--target` flag to support gitops mode (experimental)
| https://github.com/knative/client/pull/1122[#1122]

| 🎁
| Add machine readable output options to `kn trigger describe`
| https://github.com/knative/client/pull/1121[#1121]

| 🎁