@@ -15,12 +15,9 @@
 package binding
 
 import (
-	"fmt"
 	"strings"
 
 	"github.com/spf13/cobra"
-	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
-	"k8s.io/apimachinery/pkg/runtime/schema"
 	"k8s.io/client-go/tools/clientcmd"
 	v1alpha2 "knative.dev/eventing/pkg/client/clientset/versioned/typed/sources/v1alpha2"
 	"knative.dev/pkg/tracker"
@@ -72,45 +69,6 @@ func newSinkBindingClient(p *commands.KnParams, cmd *cobra.Command) (clientsourc
 	}
 
 	return clientsourcesv1alpha1.NewKnSourcesClient(client, namespace).SinkBindingClient(), nil
-}
-
-func toReference(subjectArg string, namespace string) (*tracker.Reference, error) {
-	parts := strings.SplitN(subjectArg, ":", 3)
-	if len(parts) < 3 {
-		return nil, fmt.Errorf("invalid subject argument '%s': not in format kind:api/version:nameOrSelector", subjectArg)
-	}
-	kind := parts[0]
-	gv, err := schema.ParseGroupVersion(parts[1])
-	if err != nil {
-		return nil, err
-	}
-	reference := &tracker.Reference{
-		APIVersion: gv.String(),
-		Kind:       kind,
-		Namespace:  namespace,
-	}
-	if !strings.Contains(parts[2], "=") {
-		reference.Name = parts[2]
-	} else {
-		selector, err := parseSelector(parts[2])
-		if err != nil {
-			return nil, err
-		}
-		reference.Selector = &metav1.LabelSelector{MatchLabels: selector}
-	}
-	return reference, nil
-}
-
-func parseSelector(labelSelector string) (map[string]string, error) {
-	selector := map[string]string{}
-	for _, p := range strings.Split(labelSelector, ",") {
-		keyValue := strings.SplitN(p, "=", 2)
-		if len(keyValue) != 2 {
-			return nil, fmt.Errorf("invalid subject label selector '%s', expected format: key1=value,key2=value", labelSelector)
-		}
-		selector[keyValue[0]] = keyValue[1]
-	}
-	return selector, nil
 }
 
 // subjectToString converts a reference to a string representation
